<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${packageName}.${activityClass}" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/createpost_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title" >

            <requestFocus />
        </EditText>

        <Spinner
            android:id="@+id/createpost_category"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawSelectorOnTop="true"
            android:paddingLeft="10dip" />

        <EditText
            android:id="@+id/createpost_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/location" />

        <EditText
            android:id="@+id/createpost_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:hint="@string/price" />

        <EditText
            android:id="@+id/createpost_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/createpost_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/description"
            android:lines="5"
            android:singleLine="false" />

        <Button
            android:id="@+id/createpost_upload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="upload images" />

        <LinearLayout
            android:id="@+id/createpost_imageholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >


        </LinearLayout>

        <Button
            android:id="@+id/createpost_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="submit" />
    </LinearLayout>

    <ImageView
        android:id="@+id/expanded_image_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="k"
        android:visibility="invisible" />

</RelativeLayout>