<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3F3F40"
    tools:context="${packageName}.${activityClass}" >

    <LinearLayout
        android:id="@+id/rootlayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:background="@drawable/layout_bg"
        android:orientation="vertical"
        android:paddingBottom="2.5sp"
        android:paddingLeft="5sp"
        android:paddingRight="5sp"
        android:paddingTop="2.5sp" >

        <RelativeLayout
            android:id="@+id/postlayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/startitlepost"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/post_star"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="8"
                    android:contentDescription="@string/stardescription"
                    android:src="@drawable/unstarred" />

                <LinearLayout
                    android:id="@+id/textlayout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2.5sp"
                    android:layout_marginTop="2.5sp"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="5sp" >

                    <LinearLayout
                        android:id="@+id/topofpost"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/viewpost_title"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/title"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/viewpost_price"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:gravity="right"
                            android:text="@string/price" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/botofpost"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <TextView
                            android:id="@+id/viewpost_location"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:text="@string/location"
                            android:textSize="12sp"
                            android:textStyle="italic" />

                        <TextView
                            android:id="@+id/viewpost_date"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:gravity="right"
                            android:text="@string/date"
                            android:textSize="12sp"
                            android:textStyle="italic" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>

        <View
            android:id="@+id/separator"
            android:layout_width="fill_parent"
            android:layout_height="0.2dp"
            android:background="@android:color/darker_gray"
            android:visibility="visible" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/viewpost_description"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:text="@string/description" />

            <HorizontalScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:id="@+id/viewpost_images"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:isScrollContainer="true"
                    android:orientation="horizontal"
                    android:gravity="center" >
                </LinearLayout>
            </HorizontalScrollView>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/expanded_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="k"
        android:visibility="invisible" />

</RelativeLayout>